force-app/main/default/objects/ConstAccountAssoc__c/ConstAccountAssoc__c.object-meta.xml
<CustomObject>
    <label>ConstAccountAssoc</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>ConstAccountAssoc名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>