force-app/main/default/objects/ConstAccountAssoc__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>パートナー</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>担当の工事</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>