force-app/main/default/objects/ConstAccountAssoc__c/fields/Box_Collaboration_Id__c.field-meta.xml
<CustomField>
    <fullName>Box_Collaboration_Id__c</fullName>
    <label>Box Collaboration Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>