force-app/main/default/objects/ConstAccountAssoc__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <label>工事</label>
    <referenceTo>Construction__c</referenceTo>
    <relationshipLabel>担当の会社</relationshipLabel>
    <relationshipName>Constructions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>